---------------------------------------------------------------------------------------------------
Version: 2.2.5
Date: ????
  Features:
    - Added grids for artillery-wagons.
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.2.4
Date: 2020-10-24
  Changes:
    - Clean up prototype loading.
  Bugfixes:
    - Fix smokeless startup. #12
---------------------------------------------------------------------------------------------------
Version: 2.2.3
Date: 2020-09-22
  Bugfixes:
    - Fix error with realistic reactor glow.
---------------------------------------------------------------------------------------------------
Version: 2.2.2
Date: 2020-06-01
  Bugfixes:
    - Disable ui-tweaks until a more permanant solution can be added.
---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: 2020-03-19
  Changes:
    - No longer requires Picker Atheneum.
  Bugfixes:
    - Fixes some bugs throughout the code.
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: ??????
  Features:
    - Update to Factorio 0.18
    - Added silent belts.
    - Added adjustable robot size.
  Bugfixes:
    - Fixed incorrect bot resistance application.
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: ??????
  Features:
    - Added Underground distance matches bus options. Should work with most mods that add belts.
---------------------------------------------------------------------------------------------------
Version: 2.0.8
Date: ??????
  Bugfixes:
    - Multi concrete setting typo fix and is off by default.
---------------------------------------------------------------------------------------------------
Version: 2.0.7
Date: ??????
  Features:
    - Added multi concrete. Rotate concrete to get hazard versions.