@@ -13,7 +13,6 @@ require 'prototypes/ui-tweaks'
 require 'prototypes/weapon-tweaks'
 require 'prototypes/wire-tweaks'
 require 'prototypes/wood-tweaks'
-require 'prototypes/entity-tweaks'
 require 'prototypes/quiet-belts'
 require 'prototypes/ghost-tweaks'
 require 'prototypes/ingredients-tweaks'
