@@ -46,7 +46,6 @@ picker-legacy-belt-fast-replace=Legacy Belt Fast Replace
 picker-fireproof-rolling-stock=Fireproof Trains
 picker-show-bots-on-map=Show Bots on Map
 picker-clean-tree-burning=No burned Trees
-picker-realistic-reactor-glow=Realistic Reactor Glow
 picker-roundup-resources=Remove Trees on Resources
 picker-wire-color-copper=Copper Wire
 picker-wire-color-green=Green Circuit Wire
@@ -102,7 +101,6 @@ picker-legacy-belt-fast-replace=Splitters and Undergrounds no longer fast replac
 picker-fireproof-rolling-stock=Train rolling stock is fireproof.
 picker-show-bots-on-map=Show Construction and Logistic bots on the map.
 picker-clean-tree-burning=Burned trees are not a problem.
-picker-realistic-reactor-glow=Realistic reactor glow.
 picker-roundup-resources=Remove Trees on Resources.
 picker-wire-color-copper=Copper wire display settings.
 picker-wire-color-green=Green circuit wire display settings.
