@@ -319,13 +319,6 @@ data:extend {
     },
     {
         type = 'bool-setting',
-        name = 'picker-realistic-reactor-glow',
-        setting_type = 'startup',
-        default_value = true,
-        order = 'entities-a'
-    },
-    {
-        type = 'bool-setting',
         name = 'picker-no-artillery-reveal',
         setting_type = 'startup',
         default_value = false,
